--- a/Sinobyl/Sinobyl.WPF/Views/Board.xaml
+++ b/Sinobyl/Sinobyl.WPF/Views/Board.xaml
@@ -27,7 +27,7 @@
 
         <DataTemplate x:Key="BoardSquareTemplate">
             <Grid Name="grid" Background="#FF909573" drag:DragDropProperties.DropTarget="{Binding}">
-                <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Visible">
+                <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Hidden">
                     <TextBlock Text="{Binding Path=(drag:DragDropProperties.IsActivePotentialDropTarget), ElementName=grid}"/>
                     <TextBlock Text="{Binding Path=(drag:DragDropProperties.IsActiveValidDropTarget), ElementName=grid}"/>
 
