git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@195 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.WPF/Views/Board.xaml
+++ b/Sinobyl/Sinobyl.WPF/Views/Board.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 			 xmlns:sys="clr-namespace:System;assembly=System"
 			 xmlns:engine="clr-namespace:Sinobyl.Engine;assembly=Sinobyl.Engine"
-             xmlns:vm="clr-namespace:Sinobyl.WPF.ViewModels"
+             xmlns:vm="clr-namespace:Sinobyl.WPF.ViewModel"
              x:Class="Sinobyl.WPF.Views.Board" 
              xmlns:convert="clr-namespace:Sinobyl.WPF.Converters"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
