git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@199 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.Windows/View/RootView.xaml
+++ b/Sinobyl/Sinobyl.Windows/View/RootView.xaml
@@ -9,6 +9,6 @@
         <Grid DockPanel.Dock="Top">
             <TextBlock Text="RootVM"></TextBlock>
         </Grid>
-        <ContentControl DataContext="{Binding ActiveContent}"></ContentControl>
+        <ContentControl Content="{Binding ActiveContent}"></ContentControl>
     </DockPanel>
 </UserControl>
