--- a/NoraGrace/NoraGrace.Web/Views/DbGames/Create.cshtml
+++ b/NoraGrace/NoraGrace.Web/Views/DbGames/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model NoraGrace.Sql.DbGame
+﻿@model NoraGrace.Web.ViewModels.Games.CreateViewModel
 
 @{
     ViewBag.Title = "Create";
@@ -28,22 +28,6 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Black, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Black, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Result, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.Result, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Result, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ResultReason, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.ResultReason, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.ResultReason, "", new { @class = "text-danger" })
             </div>
         </div>
 
